Update fix css toolbar admin on mobile

--- a/themes/mobile_default/css/admin.css
+++ b/themes/mobile_default/css/admin.css
@@ -7,7 +7,7 @@
  */
 
 #toolbar{
-	position:fixed;
+	position:relative;
 	z-index:1000;
 	-webkit-box-shadow: 0 -2px 4px rgba(0,0,0,.1);
 	box-shadow: 0 -2px 4px rgba(0,0,0,.1);
@@ -61,7 +61,6 @@
 
 @media (max-width: 991px) {
 	#toolbar{
-		position:relative;
 		height:auto;
 	}
 	#toolbar .pull-left, #toolbar .pull-right{
